add product line field to the general product editor